Closed
Bug 20737
Opened 26 years ago
Closed 24 years ago
[LAYER] remove all I/LAYER-aware code from Mozilla
Categories
(Tech Evangelism Graveyard :: English US, defect, P1)
Tech Evangelism Graveyard
English US
Tracking
(Not tracked)
VERIFIED
FIXED
People
(Reporter: richard, Assigned: bc)
References
()
Details
(Whiteboard: [TESTCASE])
Attachments
(3 files)
Sorry for the lack of specifics.
Using Mozilla M11, I went to www.zdnn.com (redirected to www.zdnet.com/zdnn) and
the page is completely mangled. It shows up fine in Netscape 4.xx on both
Windows and Linux.
Updated•26 years ago
|
Assignee: leger → ekrock
Severity: critical → major
Component: Browser-General → Layout
Summary: M11 completely mangles the above URL. → [LAYER] M11 completely mangles the above URL.
Comment 1•26 years ago
|
||
This site uses LAYER/ILAYER but would look OK if Mozilla actually behaved as
http://sites.netscape.net/ekrock/standards.html
describes, but it does not (yet).
Comment 2•26 years ago
|
||
Mats--Are you sure? If so, please explain.
After investigating with my test cases, as far as I can tell Mozilla is behaving
as that document says. If that's true, please close this as a DUP of the ZDNet
bug. Thanks!
Comment 3•26 years ago
|
||
Comment 4•26 years ago
|
||
I have attached a copy of http://www.zdnet.com/zdnn/ where I have renamed all
LAYER tags to XLAYER and all ILAYER tags to XILAYER. As you can see it is
laid out quite differently than the original. The problem is that (as far as
I can tell) the attributes of LAYER/ILAYER isn't ignored as they should. This
is why the original is shifted out of the viewable area to the right. I think
it is caused by the attributes: LEFT, TOP and WIDTH still being recognized.
I said it "would look OK" eventually but perhaps that was an overstatement.
But at least the content will be viewable (as you can see from the testcase).
(BTW, the testcase crashes occasionally - it's a known bug in ImageLib that
hopefully will be fixed soon)
Updated•26 years ago
|
Assignee: ekrock → vidur
Summary: [LAYER] M11 completely mangles the above URL. → [LAYER] remove all I/LAYER-aware code from Mozilla
Target Milestone: M13
Comment 6•26 years ago
|
||
Mats--YOU ARE THE MAN! Mats is correct that Mozilla is not treating I/LAYER as
unknown tags. It turns out that the changes agreed to earlier haven't been put
into place yet. Vidur has kindly agreed to take the bug. Here are the needed
changes:
1) in html.css, LAYER and ILAYER must be removed
2) in the HTML content sink, we must remove the code which creates special
content for LAYER and ILAYER
3) in the parser, we must remove LAYER and ILAYER from the element table
When these three changes have been made, I expect that this bug will be fixed.
Mats discovered that Mozilla laid out the page differently when the LAYERs were
changed to XLAYERs and the ILAYERs were changed to XILAYERs. I confirmed this
and will attach two more test cases to this bug.
Fixing this bug should be our highest post-dogfood priority as the existence of
this bug is blocking ZDNet (and other sites) from upgrading their sites to
support Mozilla (while keeping backward compatibility with Nav4--a must). ZDNet
has a resource currently assigned to do this upgrade, and we don't want to hold
them up.
Marking M13 but hoping for a fix much sooner.
Comment 7•26 years ago
|
||
Comment 8•26 years ago
|
||
Updated•26 years ago
|
Status: NEW → ASSIGNED
Whiteboard: [TESTCASE]
Comment 9•26 years ago
|
||
Marking [TESTCASE]. After bug is fixed, all three test cases should have the
same appearance. (They'll still look ugly as the files aren't Mozilla-optimized,
but they should all look ugly in an identical way.) Also changing status to
ASSIGNED per Vidur's verbal agreement.
Comment 10•26 years ago
|
||
Marking M12 as target to unblock ZDNet. Will ask permission from chofmann.
FYI here's the original decision email. Note that it mentions ua.css, not
html.css:
Functionality:
1) LAYER, NOLAYER, ILAYER markup will be
preserved on read-in and write-out.
2) The W3C DOM1 will expose all three elements
and their attributes through the DOM1 methods.
3) LAYER, NOLAYER, ILAYER will be treated
as inline elements in CSS. They will not be rendered
(display:none) but their contents will be rendered.
4 code changes:
a) In ua.css, need to strip out current markup.
b) In content sink, need to create generic content
for these elements.
c) Need to eliminate special-case handling of
NAMEd elements (Vidur knows about this).
d) Need to let NOLAYER pass through parser.
Updated•26 years ago
|
Status: ASSIGNED → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
Comment 11•26 years ago
|
||
Fixed on 12/14/1999.
Updated•26 years ago
|
Status: RESOLVED → VERIFIED
Comment 12•26 years ago
|
||
With the Dec 15th build, this problem has been fixed.
Comment 13•25 years ago
|
||
Moving all [LAYER] bugs to Evangelism component for tracking and open-source
evangelism by mozilla community members of sites that need to upgrade to support
web standards such as HTML 4.0 (instead of LAYER/ILAYER) and the W3C DOM
(instead of Nav4 document.layers[] or IE document.all()). Sites should be
lobbied to do the upgrade using the email templates that are linked to from
http://www.mozilla.org/newlayout/bugathon.html#layerbugs . When a site's owner
has confirmed receipt of the message requesting an upgrade, the bug should be
marked with the keyword evangelized to indicate that evangelism for that bug is
complete. When the site finishes the upgrade and supports standards, the bug
should be closed.
Assignee: vidur → nobody
Status: VERIFIED → NEW
Component: Layout → Evangelism
Keywords: evangwanted
QA Contact: petersen → nobody
Target Milestone: M13 → ---
Comment 14•25 years ago
|
||
Closing all Evangelism bugs where no evangelism is needed because page has been
fixed, site is internal to Netscape, report is a DUP, or bug report is no longer
appropriate for evangelism for any other reason.
Status: NEW → RESOLVED
Closed: 26 years ago → 25 years ago
Resolution: FIXED → INVALID
Comment 15•25 years ago
|
||
SPAM:Changing QA contact on 111 evang bugs as I am now the new QA contact for
this component.
Sorry about the spam
zach
QA Contact: nobody → zach
Comment 16•25 years ago
|
||
Reassigning Evangelism bugs to me, the component's new owner. I would like to
take this opportunity to thank nobody@mozilla.org for all of his dedication,
contributions, and hard work, and wish him luck at his new job. Thanks, nobody.
Assignee: nobody → BlakeR1234
Status: RESOLVED → NEW
Comment 17•25 years ago
|
||
workaround bugzilla problem that caused a bunch of evangelism bugs to be
NEW/INVALID, NEW/FIXED, NEW/WORKSFORME or NEW/DUPLICATE
Resolution: INVALID → ---
Updated•25 years ago
|
Severity: major → critical
Status: NEW → ASSIGNED
OS: Linux → All
Priority: P3 → P1
Hardware: PC → All
Target Milestone: --- → mozilla0.6
Comment 18•25 years ago
|
||
-> evangelism@telocity.com for my evangelism bugs.
removing the now-depreciated evangelism-related keywords.
setting platform to All.
Updated•25 years ago
|
Target Milestone: mozilla0.6 → Future
Comment 19•24 years ago
|
||
Reassigning evangelism bugs to bclary@netscape.com.
Assignee: evangelism → bclary
| Assignee | ||
Comment 20•24 years ago
|
||
page displays identically in Mozilla/IE5 including link rollover effects.
marking fixed.
Status: NEW → RESOLVED
Closed: 25 years ago → 24 years ago
Resolution: --- → FIXED
| Assignee | ||
Comment 22•24 years ago
|
||
All Evangelism Bugs are now in the Product Tech Evangelism. See bug 86997 for
details.
Component: Evangelism → US English
Product: Browser → Tech Evangelism
Target Milestone: Future → ---
Version: other → unspecified
Updated•10 years ago
|
Product: Tech Evangelism → Tech Evangelism Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•