Fix for bug 20737. Get rid of html.css entries for LAYER/ILAYER. Make sure only default (span) content is created for them. a=chofmann r=pollmann.